@@ -1,5 +1,10 @@
 2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* defs.h: Add global.mode_surplus.
+        * defs.cpp: Ditto.
+
+2002-11-26  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* camfr_wrap.cpp: Update to Boost release version.
 
 2002-11-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
